--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 absl-py==1.0.0
 aif360==0.3.0
 anyio==3.3.4
-apturl==0.5.2
 argon2-cffi==21.1.0
 ase==3.20.1
 attrs==21.2.0
@@ -11,7 +10,6 @@ bcrypt==3.1.7
 bleach==4.1.0
 blinker==1.4
 bokeh==2.2.3
-Brlapi==0.7.0
 cached-property==1.5.2
 cachetools==5.0.0
 captum==0.3.1
@@ -22,42 +20,29 @@ click==7.1.2
 cloudpickle==1.6.0
 colorama==0.4.3
 colorcet==2.0.6
-command-not-found==0.3
 cryptography==2.8
 csrgraph==0.1.28
-cupshelpers==1.0
 cycler==0.10.0
 Cython==0.29.24
 dask==2021.1.1
 datashader==0.12.0
 datashape==0.5.2
-dbus-python==1.2.16
 debugpy==1.5.1
 decorator==4.4.2
 deeprobust==0.1.1
-defer==1.0.6
 defusedxml==0.7.1
-dgl==0.7.2
-dgl-cu102==0.4.3.post2
-dgl-cu113==0.7.2
 dill==0.3.4
 distributed==2021.1.1
 distro==1.4.0
-distro-info===0.23ubuntu1
-duplicity==0.8.12.0
 entrypoints==0.3
-faiss-gpu==1.7.2
-fasteners==0.14.1
 fsspec==0.8.5
 future==0.18.2
 gensim==3.8.3
 google-auth==2.6.2
 google-auth-oauthlib==0.4.6
 googledrivedownloader==0.4
-gpg===1.13.1-unknown
 grakel==0.1.8
 grpcio==1.44.0
-h5py==3.1.0
 HeapDict==1.0.1
 holoviews==1.14.1
 httplib2==0.14.0
@@ -68,7 +53,7 @@ importlib-metadata==3.4.0
 importlib-resources==5.4.0
 ipdb==0.13.4
 ipykernel==6.5.0
-ipython==7.19.0
+ipython
 ipython-genutils==0.2.0
 ipywidgets==7.7.0
 isodate==0.6.0
@@ -86,14 +71,11 @@ jupyterlab-server==2.8.2
 jupyterlab-widgets==1.1.0
 keyring==18.0.1
 kiwisolver==1.3.1
-language-selector==0.1
 launchpadlib==1.10.13
 lazr.restfulclient==0.14.2
 lazr.uri==1.0.3
-llvmlite==0.37.0
 locket==0.2.1
 lockfile==0.12.2
-louis==3.12.0
 macaroonbakery==1.3.1
 Mako==1.1.0
 Markdown==3.3.3
@@ -115,7 +97,6 @@ networkx==2.5
 ninja==1.10.2.3
 nose==1.3.7
 notebook==6.4.6
-numba==0.54.1
 numpy==1.21.3
 oauthlib==3.1.0
 olefile==0.46
@@ -140,12 +121,10 @@ psutil==5.8.0
 ptyprocess==0.6.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycairo==1.16.2
 pycparser==2.21
 pyct==0.4.8
 pycups==1.9.73
 Pygments==2.4.1
-PyGObject==3.36.0
 PyJWT==1.7.1
 pymacaroons==0.13.0
 PyMetis==2020.1
@@ -155,9 +134,7 @@ pyRFC3339==1.1
 pyro-api==0.1.2
 pyro-ppl==1.7.0
 pyrsistent==0.18.0
-python-apt==2.0.0+ubuntu0.20.4.7
 python-dateutil==2.8.2
-python-debian===0.1.36ubuntu1
 python-louvain==0.14
 pytz==2020.1
 pyviz-comms==2.0.1
@@ -169,7 +146,6 @@ ranger==0.10
 ranger-fm==1.9.3
 rdflib==5.0.0
 rdkit-pypi==2021.9.4
-reportlab==3.5.34
 requests==2.25.1
 requests-oauthlib==1.3.1
 requests-unixsocket==0.2.0
@@ -177,8 +153,6 @@ retrying==1.3.3
 rsa==4.8
 scikit-image==0.18.1
 scikit-learn==1.0.1
-scipy==1.7.1
-screen-resolution-extra==0.0.0
 seaborn==0.11.1
 SecretStorage==2.3.1
 Send2Trash==1.8.0
@@ -188,7 +162,6 @@ smart-open==5.2.1
 sniffio==1.2.0
 sortedcontainers==2.3.0
 ssh-import-id==5.10
-systemd-python==234
 tblib==1.7.0
 tensorboard==2.8.0
 tensorboard-data-server==0.6.1
@@ -201,26 +174,11 @@ threadpoolctl==3.0.0
 tifffile==2020.12.8
 toml==0.10.2
 toolz==0.11.1
-torch==1.10.0+cu113
-torch-cluster==1.5.9
-torch-geometric==2.0.2
-torch-scatter==2.0.9
-torch-sparse==0.6.12
-torch-spline-conv==1.2.1
-torchaudio==0.10.0+cu113
-torchdrug==0.1.2
-torchsummary==1.5.1
-torchvision==0.11.1+cu113
 tornado==6.1
 tqdm==4.55.0
 traitlets==5.1.1
 typing-extensions==3.7.4.3
-ubuntu-advantage-tools==27.6
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
 urllib3==1.26.2
-usb-creator==0.3.7
 wadllib==1.3.3
 wcwidth==0.2.5
 webencodings==0.5.1
@@ -228,7 +186,6 @@ websocket-client==1.2.1
 Werkzeug==2.0.3
 widgetsnbextension==3.6.0
 xarray==0.16.2
-xkit==0.0.0
 yacs==0.1.8
 zict==2.0.0
 zipp==3.4.0
